<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/jdlHalaman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/formBayar"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/luasTanah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/jdlHalaman">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inpLuasTanah"
            android:inputType="number"
            app:endIconMode="clear_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Luas Tanah (m)"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nilaiJualTanah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/luasTanah">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inpNilJualTnh"
            android:inputType="number"
            app:endIconMode="clear_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nilai Jual Tanah (Rp)"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/luasBangunan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/nilaiJualTanah">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inpLuasBangunan"
            android:inputType="number"
            app:endIconMode="clear_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Luas Bangunan (m)"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nilaiJualBangunan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/luasBangunan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inpNilJualBang"
            android:inputType="number"
            app:endIconMode="clear_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nilai Jual Bangunan (Rp)"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnHitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnHitung"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nilaiJualBangunan" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnHitung"
        app:layout_constraintTop_toBottomOf="@+id/nilaiJualBangunan" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHitung" />

    <TextView
        android:id="@+id/teksNJKP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/teksPajak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teksNJKP" />


</androidx.constraintlayout.widget.ConstraintLayout>